added mongo to save audits

--- a/netcore.sample.web.api/docker-compose.yml
+++ b/netcore.sample.web.api/docker-compose.yml
@@ -12,5 +12,11 @@ services:
         volumes:
             - postgres_data:/var/lib/postgresql/data/
 
+    mongo:
+        image: mongo
+        restart: always
+        ports:
+          - "27017:27017"
+
 volumes:
   postgres_data:
