--- a/netcore.sample.web.api/netcore-sample-web-api.csproj
+++ b/netcore.sample.web.api/netcore-sample-web-api.csproj
@@ -15,10 +15,12 @@
     <None Remove="Models\Entities\" />
     <None Remove="Services\" />
     <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <None Remove="MongoDB.Driver" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
+    <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Configurations\" />
