missing mongo settings

--- a/netcore.sample.web.api/appsettings.json
+++ b/netcore.sample.web.api/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "Postgres": {
     "ConnectionString": "Server=localhost;Port=5432;Database=stackup_postgress;Username=admin;Password=admin"
+  },
+  "Mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "Sample"
   }
 }
