add kafka consumer and producer

--- a/netcore.sample.web.api/appsettings.json
+++ b/netcore.sample.web.api/appsettings.json
@@ -13,5 +13,10 @@
   "Mongo": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "Sample"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "sample",
+    "TopicAudit": "audit"
   }
 }
