--- a/netcore.sample.web.api/netcore-sample-web-api.csproj
+++ b/netcore.sample.web.api/netcore-sample-web-api.csproj
@@ -16,11 +16,13 @@
     <None Remove="Services\" />
     <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <None Remove="MongoDB.Driver" />
+    <None Remove="Confluent.Kafka" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Configurations\" />
