--- a/netcore.sample.web.api/netcore-sample-web-api.csproj
+++ b/netcore.sample.web.api/netcore-sample-web-api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>netcore_sample_web_api</RootNamespace>
+    <RootNamespace>Netcore.Sample.Web.Api</RootNamespace>
   </PropertyGroup>
 
 
@@ -18,6 +18,7 @@
     <None Remove="MongoDB.Driver" />
     <None Remove="Confluent.Kafka" />
     <None Remove="Filters\" />
+    <None Remove="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -33,5 +34,6 @@
     <Folder Include="Models\Entities\" />
     <Folder Include="Services\" />
     <Folder Include="Filters\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
 </Project>
