--- a/netcore.sample.web.api/netcore-sample-web-api.csproj
+++ b/netcore.sample.web.api/netcore-sample-web-api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'netcore_sample_web_api' " />
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
     <None Remove="Configurations\" />
