--- a/netcore.sample.web.api/docker-compose.yml
+++ b/netcore.sample.web.api/docker-compose.yml
@@ -37,5 +37,11 @@ services:
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
+    redis:
+        image: redis:alpine
+        restart: always
+        ports:
+            - "6379:6379"
+
 volumes:
   postgres_data:
