--- a/netcore.sample.web.api/netcore-sample-web-api.csproj
+++ b/netcore.sample.web.api/netcore-sample-web-api.csproj
@@ -5,19 +5,19 @@
     <RootNamespace>Netcore.Sample.Web.Api</RootNamespace>
   </PropertyGroup>
 
-
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'netcore_sample_web_api' " />
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
+    <None Remove="StackExchange.Redis" />
+    <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <None Remove="MongoDB.Driver" />
+    <None Remove="Confluent.Kafka" />
     <None Remove="Configurations\" />
     <None Remove="Extensions\" />
     <None Remove="Models\" />
     <None Remove="Models\DTOs\" />
     <None Remove="Models\Entities\" />
     <None Remove="Services\" />
-    <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
-    <None Remove="MongoDB.Driver" />
-    <None Remove="Confluent.Kafka" />
     <None Remove="Filters\" />
     <None Remove="Utils\" />
   </ItemGroup>
@@ -26,6 +26,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Configurations\" />
