--- a/Netcore.Sample.Web.Api/docker-compose.yml
+++ b/Netcore.Sample.Web.Api/docker-compose.yml
@@ -1,5 +1,16 @@
-﻿version: '2'
+﻿version: '3'
 services:
+    api:
+        build: .
+        ports:
+            - "8080:80"
+        depends_on:
+            - postgres
+            - mongo
+            - zookeeper
+            - kafka
+            - redis
+
     postgres:
         image: postgres
         restart: always
